<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/desc"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/thing_desc" />

    <EditText
        android:id="@+id/image_name"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/thing_name" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:text="TextView"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/spinnerTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="TextView"
        android:visibility="invisible" />

    <Button
        android:id="@+id/scan"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/scan" />

</LinearLayout>