<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >


    <EditText
        android:id="@+id/settings_opencv_host"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter opencv_host:port" />

    <EditText
        android:id="@+id/settings_mosquito_url"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter mosquito_host:port" />

    <EditText
        android:id="@+id/settings_mosquito_username"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter mosquito_username" />
    <EditText
        android:id="@+id/settings_mosquito_password"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Enter mosquito_password" />

    <EditText
        android:id="@+id/settings_influxdb_url"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter influxdb_host:port" />

    <EditText
        android:id="@+id/settings_influxdb_database"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter influxdb_database_name" />

    <EditText
        android:id="@+id/settings_ntp_server_host"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter NTP_host" />

    <Button
        android:id="@+id/save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/save" />

    <Button
        android:id="@+id/load"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/preload" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/cancel" />



</LinearLayout>